--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.resources.add-mappings=false
 
 jwt.secret=SUCUTAROUM
 jwt.anotherSecret=IOTPLCCloudAlibabaAWS
+
+mqtt.broker.url=tcp://0.0.0.0:1883
+mqtt.client.id=myClientId
+
